--- a/index.html
+++ b/index.html
@@ -5,43 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/style.css">
-    <title>Theme Title</title>
+    <title>Document</title>
 </head>
 <body>
-    <div>
-        <svg id="Layer_1" data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewbox="0 0 1366 445.8">
-            <defs>
-                <style>
-                    .cls-1 {
-                    fill: url(#gradient);
-                    }
-                </style>
-                <lineargradient spreadmethod="pad" id="gradient" x1="0%" y1="100%" x2="0%" y2="0%">
-                    <stop offset="0%" style="stop-color:rgba(0,29,36,1);stop-opacity:1;" />
-                    <stop offset="35%" style="stop-color:rgba(9,109,121,1);stop-opacity:1;" />
-                    <stop offset="100%" style="stop-color:rgba(0,212,255,1);stop-opacity:1;" />
-                </lineargradient>
-            </defs>
-            <path class="cls-1"
-            d="M1366,334.59c-35.76,47.13-85.07,97-135.44,90-59.88-8.29-66.63-89.32-127.49-100.5-82.78-15.2-137.89,122.32-216,105-55.81-12.38-48.17-87.13-108-106.5-78.31-25.35-125.07,98-249,97.5-103.49-.42-121.3-69.87-217.49-61.5-107.29,9.34-142.49,100.74-207,85.5C72.27,436.21,0,399.09,0,261.1V0H1366Z" />
-        </svg>
-        <h1>Theme Title</h1>
-    </div>
-    <div class="box1">
-        <h2>
-             SECTION TITLE
-        </h2>
-        <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Similique magnam aperiam in sit necessitatibus libero laudantium ea praesentium nesciunt incidunt voluptatibus sequi hic nam iure, maiores saepe voluptas. Molestiae, accusamus. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ea quaerat officia harum esse dolorem pariatur praesentium aliquid, repudiandae, adipisci sapiente quod porro exercitationem vero modi aperiam magni placeat eveniet quos. Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus quos sed soluta nisi praesentium temporibus mollitia sint vel, quia laudantium fugiat ipsum aspernatur pariatur! Autem consectetur est vel rerum doloribus. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Eum, ea a voluptatibus quo architecto itaque voluptate corrupti pariatur nihil est distinctio porro laboriosam quam non dolore veniam reprehenderit enim aut. Lorem ipsum dolor sit amet consectetur, adipisicing elit. Sapiente, porro consectetur fuga mollitia culpa necessitatibus asperiores atque saepe doloremque molestiae vero provident ducimus, quis earum dignissimos laborum soluta eius nemo!
-        </p>
-    </div>
-    <div class="box2">
-        <h2>
-            SECTION TITLE
-         </h2>
-        <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Similique magnam aperiam in sit necessitatibus libero laudantium ea praesentium nesciunt incidunt voluptatibus sequi hic nam iure, maiores saepe voluptas. Molestiae, accusamus. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ea quaerat officia harum esse dolorem pariatur praesentium aliquid, repudiandae, adipisci sapiente quod porro exercitationem vero modi aperiam magni placeat eveniet quos. Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum iste similique eveniet quis non at fugit eius tempora, et enim? Rerum laborum libero ut dignissimos voluptates voluptatibus, soluta ad accusantium. Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis possimus nobis sunt ea illum quia itaque, id repellendus! Eaque quo labore odio debitis distinctio facilis! Officiis praesentium numquam ipsam inventore. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Consequuntur eligendi, at totam, dicta pariatur facilis quod temporibus sequi dignissimos aperiam nemo ipsa! Praesentium eum excepturi, itaque perspiciatis debitis est ducimus.
-        </p>
-    </div>
+    <header><h1>This is my media query test</h1></header>
 </body>
 </html>
